--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,15 +20,18 @@
 <body>
     <h1>Todo List: </h1>
     <ul class="todoItems">
-    <% for(let i=0; i < items.length; i++) {%>
-        <li class="item">
-            <% if(items[i].completed === true) {%>
-                <span class='completed'><%= items[i].thing %></span>
+    <% for(let i=0; i < items.length; i++) {%>      
+      <% if(items[i].visible === true) {%>
+        <li class="item">            
+            <% if(items[i].completed === true) { %>
+              <span class='completed'><%= items[i].thing %></span>
             <% }else{ %>
-                <span><%= items[i].thing %></span>
-            <% } %>    
-            <span class='fa fa-trash'></span>
+              <span><%= items[i].thing %></span>
+            <% } %>
+
+            <span class='fa fa-trash'></span> 
         </li>
+      <% } %> 
     <% } %>
     </ul>
 
